--- a/shots.yml
+++ b/shots.yml
@@ -1,3 +1,9 @@
 - url: https://www.chainguard.dev/
   output: shot.png
   height: 800
+- url: https://www.chainguard.dev/chainguard-images/
+  output: shot.png
+  height: 800
+- url: https://www.chainguard.dev/chainguard-enforce/
+  output: shot.png
+  height: 800
