--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -3,6 +3,8 @@ name: Take screenshots
 on:
   push:
   workflow_dispatch:
+  schedule:
+    - cron: '0 6 * * *' # Daily at 6 AM
 
 permissions:
   contents: write
