--- a/shots.yml
+++ b/shots.yml
@@ -1,3 +1,6 @@
 - url: https://github.com/imjasonh
   output: imjasonh-github.png
   height: 800
+- url: https://projects.fivethirtyeight.com/2024-election-forecast/
+  output: fivethirtyeight.png
+  height: 800
