--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -4,7 +4,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '0 6 * * *' # Daily at 6 AM
+    - cron: '0 * * * *' # Hourly
 
 permissions:
   contents: write
